# pathtracer

./: .gitlab-ci.yml  .rustfmt.toml  Cargo.toml
beevee/: Cargo.toml
beevee/src/: axis.rs  lib.rs  ray.rs
beevee/src/aabb/: bounded.rs  bounding_box.rs  mod.rs
beevee/src/bvh/: accelerated.rs  intersected.rs  mod.rs  tree.rs
examples/: colorful.yaml  scene.yaml  triangles.yaml
pathtracer/: Cargo.toml
pathtracer/examples/: colorful.yaml  cornell-box-no-emission.yaml  cornell-box.yaml  scene.yaml  triangles.yaml
pathtracer/examples/objs/: cornell-box-no-emission.mtl
pathtracer/src/: lib.rs  main.rs
pathtracer/src/core/: camera.rs  color.rs  film.rs  light_properties.rs
pathtracer/src/light/: ambient_light.rs  directional_light.rs  mod.rs  point_light.rs  spot_light.rs
pathtracer/src/material/: mod.rs  triangle.rs  uniform.rs
pathtracer/src/render/: light_aggregate.rs  mesh.rs  mod.rs  object.rs  progress.rs  raytracer.rs  scene.rs  utils.rs
pathtracer/src/render/bidirectional/: bidirectional_pathtracer.rs  mod.rs  path.rs
pathtracer/src/render/pathtrace/: light_path.rs  mod.rs  path.rs  pathtracer.rs
pathtracer/src/render/raytrace/: mod.rs  raytracer.rs
pathtracer/src/scene/: light_aggregate.rs  mesh.rs  mod.rs  object.rs  scene.rs
pathtracer/src/serialize/: vector.rs
pathtracer/src/shape/: interpolated_triangle.rs  mesh.rs  mod.rs  sphere.rs  triangle.rs
pathtracer/src/texture/: mod.rs  triangle.rs
src/: lib.rs  main.rs
src/core/: camera.rs  color.rs  film.rs  light_properties.rs  mod.rs
src/light/: ambient_light.rs  directional_light.rs  mod.rs  point_light.rs  spot_light.rs
src/material/: mod.rs  uniform.rs
src/render/: light_aggregate.rs  mod.rs  object.rs  scene.rs
src/serialize/: coefficient.rs  mod.rs  vector.rs
src/shape/: mod.rs  sphere.rs  triangle.rs
src/texture/: mod.rs  uniform.rs
