[package]
name = "pathtracer"
version = "0.1.0"
authors = [
    "Bruno BELANYI <brunobelanyi@gmail.com>",
    "Antoine Martin <antoine97.martin@gmail.com>"
]
edition = "2018"
description = "A pathtracer written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
