[package]
name = "pathtracer"
version = "0.1.0"
authors = [
    "Bruno BELANYI <brunobelanyi@gmail.com>",
    "Antoine Martin <antoine97.martin@gmail.com>"
]
edition = "2018"
description = "A pathtracer written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pathtracer"
path = "src/lib.rs"

[[bin]]
name = "pathtracer"
path = "src/main.rs"

[dependencies]
bvh = "0.3.2"
derive_more = "0.99.3"
image = "0.23.0"
rand = "0.7"
serde_yaml = "0.8"
typetag = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]
