[package]
name = "beevee"
version = "0.1.0"
authors = ["Bruno BELANYI <brunobelanyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Linear algebra basic operations and types
nalgebra = "0.20"

# High performance quicksort/quickselect
pdqselect = "0.1.0"
